--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <div class="container-1">
-        <h2>Challenge 1: Your Age in Days</h2>
+        <div class="">
+            <h2>Challenge 1: Your Age in Days</h2>
+        </div>
         <div class="flex-box-container-1">
             <div>
                 <button class="btn btn-primary" onclick="ageInDays()">Click Me</button>
@@ -26,6 +28,19 @@
             <div id="flex-box-result"></div>
         </div>
     </div>
+
+    <div class="container-2">
+        <h2>Challenge 2: Cat Generator</h2>
+        <button class="btn btn-success" id="cat-generator" onclick="generateCat()">Generate Cat</button>    
+
+        <div class="flex-box-container-2" id="flex-cat-gen">
+
+        </div>
+    </div>
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/JS/javascript.js">
     </script>
