--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -38,6 +38,11 @@
         </div>
     </div>
 
+    <div class="container-3">
+        <h2>Challenge 3: Rock, Paper, Scissors</h2>
+        
+    </div>
+
 
 
 
