--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -40,7 +40,11 @@
 
     <div class="container-3">
         <h2>Challenge 3: Rock, Paper, Scissors</h2>
-        
+        <div class="flex-box-rps" id="flex-box-rps-div">
+            <img id="rock" src="static/Images/rock.png" alt="" width="150px" height="150px" onclick="rpsGame(this)">
+            <img id="paper" src="static/Images/paper.jpeg" alt="" width="150px" height="150px" onclick="rpsGame(this)">
+            <img id="scissors" src="static/Images/scissor.png" alt="" width="150px" height="150px" onclick="rpsGame(this)">
+        </div>
     </div>
 
 
