--- a/Practicing Different Projects/index.html
+++ b/Practicing Different Projects/index.html
@@ -47,6 +47,12 @@
         </div>
     </div>
 
+    <div class="container-4">
+        <h2 id="change-my-color">Challenge 4: Change the Color of All Buttons</h2>
+        <div class="flex-box-pick-color">
+            
+        </div>
+    </div>
 
 
 
